Removed deprecated loaders code

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-/.env
-/.project
-/.pydevproject
-*.pyc
 /public/static
-/public/media
-/logs
+/.pydevproject
 /data
-/.settings
+/public/media
+*.pyc
+/.env
 /local_settings.py
+/.settings
+/.project
+*.sublime-*
+/logs
